--- a/platano.html/platano.html
+++ b/platano.html/platano.html
@@ -6,6 +6,8 @@
     <title>Platano</title>
 </head>
 <body>
+    <backround-color> red_nigth </backround-color>
+    <P>ESTO es solo un ejemplo, bueno, pero hay color, hablemos de platos porque si.</P>
     
 </body>
 </html>
